--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%= link_to "List", songs_path %> / <%= link_to "Add Song", new_song_path %>
 
 <%= yield %>
 
